# rs-auth

./: .dockerignore  .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile  Dockerfile.armv7  Dockerfile.debian  Dockerfile.local-target  README.md  auth-api-0.1.0.tgz  config.json.example  config.test.json  index.yaml  openapi.json  postgres-docker-compose.yaml  sqlx-data.json
.github/workflows/: helm.yml  test.yml
.sqlx/: query-00fbfa9771a6075bc80384f1332ffb8e64529e70571dc1ef35166e4a1c85a3dd.json  query-025bc92f5f4ce51af9abb41014bb60968145bbe3641549f3725d283229640dfe.json  query-03d3298f82af7bea1954453439877ddfbfa83888300edb65ef6563ea558e1cf9.json  query-04c78c8c7cb8c97ed9492ea02f6fd2551fdb268ac7c3264fca3171788ee34a3f.json  query-05c41cd2f312711ccbd6c653a9868c10b68ca41cac965eb93f1579758d9941ce.json  query-0d35f6c0d73014107954ff430a4eeadc28a7d0bf61845cd073f2fe0c0529f448.json  query-12e034e5299edfb76a7b5cc1d4c1d9cb7d0663fe1e5b7bbb84193df79b821768.json  query-16a7e4bc734517f33f3c4fb7d1eb89e6bcb0a2dd9877a1735c6eecf072f4135d.json  query-1e48b06d1a6980de8263a4bcf42c0353011732312a7ecc9c7f09e03097f1e553.json  query-23e8608f5938ec243b0196436e0e0c9b98df08790241406875b62b7d9e64e498.json  query-26890c3ae89844556429472bb72be448c4ca8e602a4ebabf651f6086bc25865c.json  query-2f19703b4bbe2fb366d6f40c4a2f49720e4723ab3818458c472c761e9b1f8606.json  query-2f44c3faa7f7f18fb69db65a5050d7be8e4bedde709ce2eb6402679dbd094783.json  query-2f51205ea6eb5aac8c757a18c4388eb6f34fdb7bd0318cb35fadfd19814fcf8e.json  query-35df0854dfa6a804781c34d0a9c9358a8a8e0ae4e9baf2f04ac43b794af5cc26.json  query-35e1d8c449de4b6c6825d610ea32c57d517b5267901bb9c73f77d4e07907eaf1.json  query-42ce760348ac4df26aebb05d4c90be94f57f1d697f3f752085c197991af90aca.json  query-43774deb3f799f29914ee171893b37272568df60f51a715f1242ed1ed1c11967.json  query-492571d6eece1a8c2fabb4c61b6ab3b63553e67c5627bbc2f129997a0a6ad25a.json  query-5ab2b3c30850b8d8d977d1e81f411c30f446f25a3dd4e35e50a6025263e1c6a7.json  query-5b61c32d346e5a731e2d9ae8d64a7b06d55f65ac0f85f92615c88e537edef83c.json  query-6044e4d6d5bc6d4625f74f4f1b8307796819b0763322c5c81c42a3a7e82d61ab.json  query-60b62f78624610e3c670fba03c4f7373af915a1c1daf820207caeb82313a9217.json  query-6bf55b0045288b312c08d20e8b31eec6f932f2c9b05c77a824114def5255fed3.json  query-6ed1c9b3e6bc2cf805f1a11d9de08b111607285399a5bd82d39f51af4e1d3faf.json  query-6fd76f99af871c7286ffc7ea03a37a95f382a5621500707fd52af74dc1dbfb83.json  query-7048788b47e871b6355ed390983cbf1869f3dfb168b87a7e4729f4b54a8ed94c.json  query-71657adde1ec4a0d13da8084b87439b7c25b56da867cc2c0dd3c43faa71120bb.json  query-76770ce9e7337393f3b8ed3336fbbe005f1e5a5d4b71385646728b4c4271d47b.json  query-7863fbf194b848bf13828dd25f4cb553a93667257e26dae607a0be4825a40b1f.json  query-7d8e989f387a781f0208d102c8d6cb7dd1bf2d8278c2c29d02b2dde0eb73b4e4.json  query-8197836fe81df9634e50a0061bb8e26f9768a50e545c72892de72928061109d9.json  query-81cecb48747a2fc4b464d92d0e2e568d4c05052d3404180f722fdd87e977fdf8.json  query-8271e7ee1c153039995394ef74aaab879147b251207231f790895fda1bf72abd.json  query-87d646ff2cfb6d45a34474c9fef6e677341a9794fddcc077fbb2ca1041fa895a.json  query-8d8df7db7dcc3b8f2155fc4d514a5a6853852dff91b0676c8855b8db115a26ed.json  query-960829f1501fbc549326c2121e5f843dd8fe4e23efa4efd16dd940bc677c3737.json  query-9a3b080a55bd10d0eed96aabe6784dfa867d09382ffdd1ce6d5425493df2cd53.json  query-9bce02586ee2dfa0a202192b5fd3e08ad5cf1cade342a3556132e37267efc4ff.json  query-a8268c195d5b27948dcbb86151cf93f001eecb6a43d2f31574d9fdf531b9644c.json  (+10 more)
auth-client/: Cargo.toml  README.md
auth-client/docs/: Algorithm.md  Application.md  ApplicationApi.md  ApplicationPagination.md  CreateApplication.md  CreateServiceAccount.md  CreateTenant.md  CreateTenantOAuth2Provider.md  CreateTotpRequest.md  CreateUser.md  CreateUserEmail.md  CurrentUserApi.md  JwtApi.md  MfaApi.md  MfaRequest.md  MfaRequestOneOf.md  MfaRequestOneOf1.md  MfaRequestServiceAccount.md  MfaRequestTotp.md  Oauth2Api.md  Oauth2ProviderApi.md  OpenapiApi.md  P2pApi.md  Pagination.md  PaginationServiceAccount.md  PaginationTenant.md  PaginationTenantItemsInner.md  PaginationUser.md  RegisterApi.md  RegisterUser.md  ResetPasswordRequest.md  ServiceAccount.md  ServiceAccountApi.md  ServiceAccountCreateUserEmail.md  ServiceAccountCreateUserPhoneNumber.md  ServiceAccountPagination.md  ServiceAccountUpdateUserEmail.md  ServiceAccountUpdateUserPhoneNumber.md  Tenant.md  TenantApi.md  (+28 more)
client/: Cargo.toml  README.md
client/docs/: CreateUserPhoneNumber.md  JwtApi.md  JwtRequest.md  MfaRequest.md  PaginationServiceAccountItemsInner.md  PaginationUserItemsInner.md  ServiceAccount.md  ServiceAccountUpdateUserEmail.md  Tenant.md  TenantOAuth2Provider.md  Token.md  TokenApi.md  TokenRequest.md  TokenRequestOneOf1.md  TokenRequestOneOf2.md  UpdateTenant.md  UpdateTenantOAuth2Provider.md  UpdateUsername.md  UserApi.md  UserOAuth2Provider.md  UserPhoneNumber.md  UserResetPassword.md  UsersApi.md
helm/auth/: Chart.yaml  README.md  values.yaml
helm/auth-api/: Chart.yaml  values.yaml
migrations/: 20230702234200_core.down.sql  20230702234200_core.up.sql
migrations/postgresql/: 20241117224814_init.down.sql  20241117224814_init.up.sql  20241117224821_init.down.sql
migrations/sqlite/: 20241117224814_init.down.sql  20241117224814_init.up.sql  20241117224821_init.down.sql
src/: app.rs  lib.rs  main.rs
src/cli/: args.rs  completions.rs  mod.rs  run.rs  serve.rs
src/controller/: application.rs  auth.rs  mod.rs  oauth2.rs  openapi.rs  user.rs  util.rs
src/core/: atomic_value.rs  config.rs  database.rs  db.rs  encryption.rs  error.rs  jwt.rs  mail.rs  mod.rs  openapi.rs  settings.rs
src/middleware/: admin.rs  admin_app.rs  auth.rs  authorization.rs  claims.rs  mod.rs  openid_claims.rs  service_account_authorization.rs  tenant_id.rs  tenent_id.rs  user_authorization.rs  validated_json.rs
src/model/: application.rs  auth.rs  current_user.rs  error.rs  jwt.rs  mfa.rs  mod.rs  oauth2.rs  permission.rs  register.rs  service_account.rs  tenant.rs  tenant_oauth2_provider.rs  tenent.rs  (+5 more)
tests/: auth_test.rs  mod.rs  util_test.rs
(+163 files in other folders)
