[package]
authors = ["nathanfaucett@gmail.com"]
default-run = "auth"
description = "auth"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "auth"
repository = "https://github.com/aicacia/rs-auth"
rust-version = "1.82"
version = "0.1.0"

[lib]
name = "auth"

[[bin]]
name = "auth"

[dependencies]
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
axum = { version = "0.8.0-rc.1", default-features = false, features = [
  "tokio",
  "http1",
  "json",
  "query",
  "macros",
] }
utoipa = { version = "5.3", default-features = false, features = [
  "axum_extras",
  "chrono",
  "uuid",
  "macros",
] }
# TODO: use when supports 8.0
# utoipa-axum = { version = "0.2", default-features = false }
expiringmap = "0.1"
lazy_static = "1.5"
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }
config = "0.15"
rust-argon2 = "2.1"
oauth2 = { version = "4.4" }
http = "1.2"
totp-rs = { version = "5.6", default-features = false, features = [
  "gen_secret",
] }
rand = "0.8"
tokio = { version = "1.42", default-features = false, features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "signal",
] }
tokio-util = { version = "0.7", default-features = false }
validator = { version = "0.19", features = ["derive"] }
log = "0.4"
jsonwebtoken = "9.3"
build-time = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", default-features = false, features = [
  "uuid",
  "chrono",
  "time",
  "macros",
  "runtime-tokio-rustls",
  "all-databases",
] }
uuid = { version = "1.11", features = ["serde", "v4"] }

[dev-dependencies]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
