[package]
authors = ["nathanfaucett@gmail.com"]
default-run = "auth"
description = "Aicacia Auth API provides authentication services for applications."
edition = "2021"
license = "MIT OR Apache-2.0"
name = "auth"
repository = "https://github.com/aicacia/rs-auth"
rust-version = "1.56"
version = "0.1.0"

[lib]
name = "auth"

[[bin]]
name = "auth"

[features]
default = ["completions"]

completions = ["dep:clap_complete"]

[dependencies]
dotenvy = { version = "0.15", default-features = false }
config = { version = "0.15", default-features = false, features = ["json"] }

clap = { version = "4.5", default-features = false, features = [
  "std",
  "derive",
  "help",
] }
clap_complete = { version = "4.5", default-features = false, optional = true }

log = { version = "0.4", default-features = false }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "ansi",
  "fmt",
  "std",
  "tracing-log",
  "env-filter",
] }

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }

axum = { version = "0.8", default-features = false, features = [
  "tokio",
  "http1",
  "json",
  "query",
  "macros",
] }
utoipa = { version = "5.3", default-features = false, features = [
  "axum_extras",
  "chrono",
  "uuid",
  "macros",
] }
utoipa-axum = { version = "0.2", default-features = false }

http = { version = "1.3", default-features = false }
tower-http = { version = "0.6", default-features = false, features = [
  "cors",
  "trace",
  "compression-gzip",
] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "json",
] }

tokio = { version = "1.44", default-features = false, features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "signal",
] }
tokio-util = { version = "0.7", default-features = false, features = ["io"] }
futures-util = { version = "0.3", default-features = false }

sqlx = { version = "0.8", default-features = false, features = [
  "uuid",
  "chrono",
  "time",
  "macros",
  "migrate",
  "runtime-tokio-rustls",
  "all-databases",
] }

validator = { version = "0.20", default-features = false, features = [
  "derive",
] }
build-time = { version = "0.1", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
uuid = { version = "1.16", features = ["serde", "v4"] }
atomicoption = "0.1"
urlencoding = { version = "2.1", default-features = false }
form_urlencoded = { version = "1.2", default-features = false }
expiringmap = { version = "0.1", default-features = false }
rust-argon2 = { version = "2.1", default-features = false }
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }
jsonwebtoken = { version = "9.3", default-features = false }
base64 = { version = "0.22", default-features = false }

oauth2 = { version = "5.0", default-features = false, features = [
  "reqwest",
  "rustls-tls",
] }
totp-rs = { version = "5.6", default-features = false, features = [
  "gen_secret",
] }

[dev-dependencies]
tower = "0.5"
scopeguard = "1.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "abort"
strip = true
